Added test suites for inventory business domain silo